test/tests/operators/http/http_error_paginate_invalid.txt
error: unsupported pagination mode: `invalid`
 --> tests/operators/http/http_error_paginate_invalid.tql:5:48
  |
5 | http "https://example.org/data.json", paginate="invalid" {
  |                                                ^^^^^^^^^ 
  |
  = hint: `paginate` must be `"link"` or a lambda
